--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,50 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "denoising-frc-analysis"
 version = "0.1.0"
-description = "Add your description here"
+description = "Command line scripts for analysing FRC resolution for denoised SMLM data."
+
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+
+license = "MIT"
+
+requires-python = ">=3.11"
+authors = [
+    {name = "Matthew Tang", email = "matthew.tang@stfc.ac.uk"}
+]
+
+dependencies = [
+    "contourpy==1.3.3",
+    "cycler==0.12.1",
+    "fonttools==4.59.2",
+    "imageio==2.37.0",
+    "kiwisolver==1.4.9",
+    "lazy_loader==0.4",
+    "llvmlite==0.44.0",
+    "matplotlib==3.10.6",
+    "networkx==3.5",
+    "numba==0.61.2",
+    "numpy==2.2.6",
+    "opencv-python==4.12.0.88",
+    "packaging==25.0",
+    "pandas==2.3.2",
+    "pillow==11.3.0",
+    "pyparsing==3.2.3",
+    "python-dateutil==2.9.0.post0",
+    "pytz==2025.2",
+    "scikit-image==0.25.2",
+    "scipy==1.16.2",
+    "seaborn==0.13.2",
+    "six==1.17.0",
+    "tifffile==2025.9.9",
+    "tzdata==2025.2"
+]
+
+[project.optional-dependencies]
+dev = ["ruff >= 0.14.0"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/FRC_analysis"]
