--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ dev = ["ruff >= 0.14.0"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/FRC_analysis"]
+
+[project.scripts]
+denoising-analysis = "FRC_analysis:frc_n_dn_analysis"
